--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
       </div>
   
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#"><img src="./twitter.svg" alt="twitter" height="30"></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#"><img src="./instagram.svg" alt="instagram" height="30"></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#"><img src="./facebook.svg" alt="facebook" height="30"></a></li>
       </ul>
     </footer>
   </div>
